@@ -3402,16 +3402,17 @@ int process_opts(
         l_opt = passet;
 
         /* a ,procs= in the node spec is illegal. Validate the node spec */
-        if(strstr(optarg, ",procs="))
+        if ((strstr(optarg, ",procs=") != NULL) &&
+            (strstr(optarg, "nodes=") != NULL))
           {
           printf("illegal node spec: %s\n", optarg);
           return(-1);
           }
 
         /* Normal evaluation of batch job resources. */
-        if(attrib)
+        if (attrib)
           {
-          if(attrib->resource)
+          if (attrib->resource)
             {
             /* right here we are looking for a +procs=x in the node spec */
             char *proc_ptr = NULL;
